# marlowe-actus-labs

./: .gitignore  README.md  cabal.project  flake.nix  hie.yaml  index.html  package-lock.json  package.json  packages.dhall  shell.nix  spago.dhall  webpack.js
.github/workflows/: ci.yml
codegen/: codegen.cabal
public/: about.md  index.html  style.scss
src/: Main.purs  Wallet.js  Wallet.purs  WalletContext.purs  dev-server.js  frontend.js
src/Actus/: Core.purs  Domain.purs
src/Actus/Domain/: BusinessEvents.purs  ContractState.purs  ContractTerms.purs  Schedule.purs
src/Actus/Model/: ContractSchedule.purs  Payoff.purs  StateInitialization.purs  StateTransistion.purs
src/Actus/Utility/: DateShift.purs  ScheduleGenerator.purs  YearFraction.purs
src/Component/: App.purs  ConnectWallet.purs  ContractForm.purs  ContractList.purs  CreateContract.purs  EventList.purs  MessageHub.purs  SubmitContract.purs  Types.purs  Wallet.purs  Widgets.purs
src/Component/CreateContract/: FirstStep.purs  Forms.purs  FourthStep.purs  SecondStep.purs  ThirdStep.purs  Types.purs
src/Component/Types/: ContractInfo.purs
src/Component/Widgets/: Form.purs  Modal.purs  Table.purs
src/Contrib/: CardanoMultiplatformLib.purs  Effect.purs  Fetch.purs  HexString.purs
src/Contrib/CardanoMultiplatformLib/: Address.js  Address.purs  (+3 more)
src/GDP/: Theory.purs
src/Marlowe/: Actus.purs
src/Wallet/: Internal.purs  Types.purs
static/: app.js  index.html
test/: Main.purs  Wallet.purs
test/Actus/: TestFramework.purs
test/Marlowe/: Actus.purs
test/Wallet/: Internal.js  Internal.purs
(+47 files in other folders)
