name: codegen
version: 0.0.1
cabal-version: >= 1.6
build-type: Simple

executable codegen
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
               -Wincomplete-uni-patterns -Wincomplete-record-updates
  hs-source-dirs: src
  default-language: Haskell2010
  main-is: Main.hs
  build-depends:
    base >= 4.9 && < 5

  build-depends:
      aeson,
      base,
      lens,
      marlowe-runtime,
      purescript-bridge,
      servant-purescript,
      text

